--- a/client/src/App/app.css
+++ b/client/src/App/app.css
@@ -1,5 +1,17 @@
 html,body{
     margin:0px;
-    background: whitesmoke;
+    background: lavender;
 }
 
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
